--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -1,4 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&family=Tangerine&display=swap');
+
+
+
 
 * {
     color: black;
@@ -126,19 +129,69 @@ header {
     max-width: 100%;
 }
 
-.bottom-right-text {
+.text-image-header {
     font-size: 200%;
-   font-family: 'Lato', sans-serif; 
+    font-family: 'Handlee', cursive;
+    font-size: 30px;
     letter-spacing: 3px;
 
-    width: 300px;
+    width: 350px;
     height: 200px;
 
     padding-top: 20px;
     padding-left: 20px;
-    background-color: rgba(107, 212, 241, 0.7);
+    background-color: rgba(100, 179, 201, 0.7);
+
 
     bottom: 200px;
-    right: 300px;
+    right: 280px;
     position: absolute;
+
+}
+
+#announcements {
+    height: 500px;
+}
+
+#big-header {
+    text-align: center;
+    margin: 20px 0;
+    font-size: 280%;
+    text-decoration: underline;
+}
+
+.left-announcement-heading {
+    width: 60%;
+    float: right;
+    line-height: 20px;
+    clear: both;
+    margin-bottom: 50px; 
+
+}
+
+#left-announcement {
+    padding-top: 30px;
+    width: 45%;
+    float: left;
+
+}
+
+.right-announcement-heading {
+    width: 60%;
+    float: left;
+    line-height: 20px;
+    clear: both;
+    margin-bottom: 50px;
+}
+#right-announcement {
+    padding-top: 30px;
+    width: 45%;
+    float: right;
+}
+
+.announcement-image {
+margin-top: 30px; 
+width:100%;
+height: 300px;
+
 }
