--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -194,3 +194,43 @@ width:100%;
 height: 300px;
 
 }
+
+.footer{
+    background:#dad4d4;
+    padding:18px 0px;
+    font-family: 'Play', sans-serif;
+    text-align:center;
+    }
+    
+    .footer .row{
+    width:100%;
+    margin:1% 0%;
+    padding:0.6% 0%;
+    color:gray;
+    font-size:0.8em;
+    }
+    
+    .footer .row a{
+        text-decoration:none;
+        color:gray;
+        transition:0.5s;
+        }
+    
+    .footer .row a:hover{
+    color:#1a95b4;
+    }
+    
+    .footer .row ul{
+    width: 100%;
+    }
+    
+    .footer .row ul li{
+    display:inline-block;
+    margin:1px 10px;
+    }
+    
+    .footer .row a i{
+    font-size:2em;
+    margin:0% 1%;
+    }
+    
