added positioning to correct desktop-size. and also swaped from px to %

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -34,7 +34,7 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 300px;
+    gap: 10%;
     list-style-type: none;
 }
 
@@ -134,7 +134,7 @@ header {
     font-size: 30px;
     letter-spacing: 3px;
 
-    width: 350px;
+    width: 250px;
     height: 200px;
 
     padding-top: 20px;
@@ -142,8 +142,8 @@ header {
     background-color: rgba(100, 179, 201, 0.7);
 
 
-    bottom: 200px;
-    right: 280px;
+    bottom: 7%;
+    right: 7%;
     position: absolute;
 
 }
@@ -235,3 +235,34 @@ height: 300px;
     margin:0% 1%;
     }
     
+    @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
+
+    body { background:rgb(30,30,40); }
+    form { max-width:420px; margin:50px auto; }
+    
+    .feedback-input {
+      color:white;
+      font-family: Helvetica, Arial, sans-serif;
+      font-weight:500;
+      font-size: 18px;
+      border-radius: 5px;
+      line-height: 22px;
+      background-color: transparent;
+      border:2px solid #CC6666;
+      transition: all 0.3s;
+      padding: 13px;
+      margin-bottom: 15px;
+      width:100%;
+      box-sizing: border-box;
+      outline:0;
+    }
+    
+    .feedback-input:focus { border:2px solid #CC4949; }
+    
+    textarea {
+      height: 150px;
+      line-height: 150%;
+      resize:vertical;
+    }
+    
+   
