--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -151,6 +151,7 @@ header {
 #announcements {
     height: 500px;
     margin-bottom: 100px;
+    background-color: #e5e5e5
 }
 
 #big-header {
@@ -256,13 +257,5 @@ height: 300px;
       box-sizing: border-box;
       outline:0;
     }
-    
-    .feedback-input:focus { border:2px solid #CC4949; }
-    
-    textarea {
-      height: 150px;
-      line-height: 150%;
-      resize:vertical;
-    }
-    
+
    
