--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -53,15 +53,24 @@ header {
 }
 
 .hero-section {
-    background-image: url('../images/spa-image.jpg');
+    
+    background-image: url('../images/alex-bertha-Jyg7xHRmXiU-unsplash.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     height: 1000px;
     width: 100%;
+    left: auto;
+    right: auto;
 
 }
 
-
+.hero-section-booking {
+    background-image: url('../images/tim-chow-9IcKPSQ9G5Q-unsplash.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 1000px;
+    width: 100%;
+}
 
 .navigation-bar {
     font-family: 'Raleway', Arial, sans-serif;
@@ -139,9 +148,8 @@ header {
 
     padding-top: 20px;
     padding-left: 20px;
+
     background-color: rgba(100, 179, 201, 0.7);
-
-
     bottom: 7%;
     right: 7%;
     position: absolute;
@@ -165,7 +173,7 @@ body {
 }
 
 .left-announcement-heading {
-    width: 60%;
+    width: 70%;
     float: right;
     line-height: 20px;
     clear: both;
@@ -175,13 +183,13 @@ body {
 
 #left-announcement {
     padding-top: 30px;
-    width: 45%;
+    width: 46%;
     float: left;
 
 }
 
 .right-announcement-heading {
-    width: 60%;
+    width: 70%;
     float: left;
     line-height: 20px;
     clear: both;
@@ -189,7 +197,7 @@ body {
 }
 #right-announcement {
     padding-top: 30px;
-    width: 45%;
+    width: 46%;
     float: right;
 }
 
