--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -208,6 +208,40 @@ height: 300px;
 
 }
 
+input[type=text], select, textarea {
+
+    width: 50%; /* Full width */
+    padding: 15px; /* Some padding */
+     
+    border: 2px solid #6c95e0; /* Gray border */
+    box-sizing: border-box; /* Make sure that padding and width stays in place */
+    margin-top: 5px; /* Add a top margin */
+    margin-bottom: 15px; /* Bottom margin */
+    resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
+  }
+  
+  /* Style the submit button with a specific background color etc */
+  input[type=submit] {
+    background-color: #04AA6D;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+  
+  }
+  
+  /* When moving the mouse over the submit button, add a darker green color */
+  input[type=submit]:hover {
+    background-color: #45a049;
+  }
+  
+  .form-wrap {
+    text-align: center;
+    margin-top: 125px;
+    border-radius: 5px;
+    padding: 20px;
+  }
+
 .footer{
     background:#dad4d4;
     padding:18px 0px;
