--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -41,7 +41,6 @@ header {
 .navigation-bar>li {
     text-decoration: none;
     font-size: 25px;
-
 }
 
 .navigation-bar>li>a {
@@ -53,7 +52,7 @@ header {
 }
 
 .hero-section {
-    
+
     background-image: url('../images/alex-bertha-Jyg7xHRmXiU-unsplash.jpg');
     background-repeat: no-repeat;
     background-size: cover;
@@ -156,9 +155,28 @@ header {
 
 }
 
+.text-image-header-booking {
+    font-size: 200%;
+    font-family: 'Handlee', cursive;
+    font-size: 22px;
+    letter-spacing: 3px;
+
+    width: 250px;
+    height: 200px;
+
+    padding-top: 20px;
+    padding-left: 15px;
+
+    background-color: rgba(100, 179, 201, 0.7);
+    bottom: 7%;
+    right: 2%;
+    position: absolute;
+}
+
 body {
     background-color: #e5e5e5;
-   }
+}
+
 #announcements {
     height: 500px;
     margin-bottom: 100px;
@@ -177,7 +195,7 @@ body {
     float: right;
     line-height: 20px;
     clear: both;
-    margin-bottom: 50px; 
+    margin-bottom: 50px;
 
 }
 
@@ -195,6 +213,7 @@ body {
     clear: both;
     margin-bottom: 50px;
 }
+
 #right-announcement {
     padding-top: 30px;
     width: 46%;
@@ -202,84 +221,82 @@ body {
 }
 
 .announcement-image {
-margin-top: 30px; 
-width:100%;
-height: 300px;
+    margin-top: 30px;
+    width: 100%;
+    height: 300px;
 
 }
 
-input[type=text], select, textarea {
+input[type=text],
+select,
+textarea {
 
-    width: 50%; /* Full width */
-    padding: 15px; /* Some padding */
-     
-    border: 2px solid #6c95e0; /* Gray border */
-    box-sizing: border-box; /* Make sure that padding and width stays in place */
-    margin-top: 5px; /* Add a top margin */
-    margin-bottom: 15px; /* Bottom margin */
-    resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
-  }
+    width: 50%;
+    padding: 15px;
+    border: 2px solid #6c95e0;
+    box-sizing: border-box;
+    margin-top: 5px;
+    margin-bottom: 15px;
+    resize: vertical
   
-  /* Style the submit button with a specific background color etc */
-  input[type=submit] {
+}
+
+input[type=submit] {
     background-color: #04AA6D;
     color: white;
     padding: 12px 20px;
     border: none;
     border-radius: 4px;
-  
-  }
-  
-  /* When moving the mouse over the submit button, add a darker green color */
-  input[type=submit]:hover {
-    background-color: #45a049;
-  }
-  
-  .form-wrap {
+
+}
+
+
+.google-maps {
+    border: solid;
+}
+
+.form-wrap {
     text-align: center;
     margin-top: 125px;
     border-radius: 5px;
     padding: 20px;
-  }
+}
 
-.footer{
-    background:#dad4d4;
-    padding:18px 0px;
+.footer {
+    background: #dad4d4;
+    padding: 18px 0px;
     font-family: 'Play', sans-serif;
-    text-align:center;
-    }
-    
-    .footer .row{
-    width:100%;
-    margin:1% 0%;
-    padding:0.6% 0%;
-    color:gray;
-    font-size:0.8em;
-    }
-    
-    .footer .row a{
-        text-decoration:none;
-        color:gray;
-        transition:0.5s;
-        }
-    
-    .footer .row a:hover{
-    color:#1a95b4;
-    }
-    
-    .footer .row ul{
+    text-align: center;
+}
+
+.footer .row {
     width: 100%;
-    }
-    
-    .footer .row ul li{
-    display:inline-block;
-    margin:1px 10px;
-    }
-    
-    .footer .row a i{
-    font-size:2em;
-    margin:0% 1%;
-    }
-    
-    
-   
+    margin: 1% 0%;
+    padding: 0.6% 0%;
+    color: gray;
+    font-size: 0.8em;
+}
+
+.footer .row a {
+    text-decoration: none;
+    color: gray;
+    transition: 0.5s;
+}
+
+.footer .row a:hover {
+    color: #1a95b4;
+}
+
+.footer .row ul {
+    width: 100%;
+}
+
+.footer .row ul li {
+    display: inline-block;
+    margin: 1px 10px;
+}
+
+.footer .row a i {
+    font-size: 2em;
+    margin: 0% 1%;
+}
