--- a/assets/CSS/booking.css
+++ b/assets/CSS/booking.css
@@ -1,7 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&family=Tangerine&display=swap');
 
 
-
+body {
+    background-color: #04AA6D
+}
 
 * {
     color: black;
@@ -50,19 +52,6 @@ header {
 .navigation-bar>li>a>i {
     font-size: 1.2rem;
 }
-
-.hero-section {
-
-    background-image: url('../images/alex-bertha-Jyg7xHRmXiU-unsplash.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 1000px;
-    width: 100%;
-    left: auto;
-    right: auto;
-
-}
-
 .hero-section-booking {
     background-image: url('../images/tim-chow-9IcKPSQ9G5Q-unsplash.jpg');
     background-repeat: no-repeat;
@@ -173,60 +162,11 @@ header {
     position: absolute;
 }
 
-body {
-    background-color: #e5e5e5;
-}
 
-#announcements {
-    height: 500px;
-    margin-bottom: 100px;
-    background-color: #e5e5e5;
-}
 
-#big-header {
-    text-align: center;
-    margin: 20px 0;
-    font-size: 280%;
-    text-decoration: underline;
-}
 
-.left-announcement-heading {
-    width: 70%;
-    float: right;
-    line-height: 20px;
-    clear: both;
-    margin-bottom: 50px;
 
-}
-
-#left-announcement {
-    padding-top: 30px;
-    width: 46%;
-    float: left;
-
-}
-
-.right-announcement-heading {
-    width: 70%;
-    float: left;
-    line-height: 20px;
-    clear: both;
-    margin-bottom: 50px;
-}
-
-#right-announcement {
-    padding-top: 30px;
-    width: 46%;
-    float: right;
-}
-
-.announcement-image {
-    margin-top: 30px;
-    width: 100%;
-    height: 300px;
-
-}
-
+/* footer css */
 input[type=text],
 select,
 textarea {
