--- a/assets/CSS/booking.css
+++ b/assets/CSS/booking.css
@@ -200,7 +200,28 @@ margin-right: auto;
 
 }
 
+input[type=text], input[type=email],
+select,
+textarea {
 
+    width: 50%;
+    padding: 15px;
+    border: 2px solid #6c95e0;
+    box-sizing: border-box;
+    margin-top: 5px;
+    margin-bottom: 15px;
+    resize: vertical
+  
+}
+
+input[type=submit] {
+    background-color: #04AA6D;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+
+}
 .form-wrap {
     text-align: center;
     margin-top: 125px;
