--- a/assets/CSS/booking.css
+++ b/assets/CSS/booking.css
@@ -2,7 +2,7 @@
 
 
 body {
-    background-color: #04AA6D
+    background-color: #b4cac3
 }
 
 * {
@@ -60,6 +60,9 @@ header {
     height: 1000px;
     width: 100%;
 }
+
+
+/* Navbar */
 
 .navigation-bar {
     font-family: 'Raleway', Arial, sans-serif;
