--- a/assets/CSS/about-us.css
+++ b/assets/CSS/about-us.css
@@ -116,80 +116,30 @@ header {
     max-width: 100%;
 }
 
-.text-image-header {
-    font-size: 200%;
-    font-family: 'Handlee', cursive;
-    font-size: 30px;
-    letter-spacing: 3px;
-
-    width: 250px;
-    height: 200px;
-
-    padding-top: 20px;
-    padding-left: 20px;
-
-    background-color: rgba(100, 179, 201, 0.7);
-    bottom: 7%;
-    right: 7%;
-    position: absolute;
-
-}
-
 body {
     background-color: #e5e5e5;
 }
 
-#announcements {
-    height: 500px;
-    margin-bottom: 100px;
-    background-color: #e5e5e5;
+.facilities-header {
+font-size: 30px;
+text-align: center;
 }
 
-#big-header {
-    text-align: center;
-    margin: 20px 0;
-    font-size: 280%;
-    text-decoration: underline;
+.facilities-text {
+border:solid;
 }
-
-.left-announcement-heading {
-    width: 70%;
-    float: right;
-    line-height: 20px;
-    clear: both;
-    margin-bottom: 50px;
-
-}
-
-#left-announcement {
-    padding-top: 30px;
-    width: 46%;
+.image-container {
+    width: 400px;
+    height: 400px;
+    margin: 0 auto;
+  }
+  
+  .image-container > img {
     float: left;
-
-}
-
-.right-announcement-heading {
-    width: 70%;
-    float: left;
-    line-height: 20px;
-    clear: both;
-    margin-bottom: 50px;
-}
-
-#right-announcement {
-    padding-top: 30px;
-    width: 46%;
-    float: right;
-}
-
-.announcement-image {
-    margin-top: 30px;
-    width: 100%;
-    height: 300px;
-
-}
-
-
+    border: 2px solid black;
+    width: 45%;
+    margin: 1.66%;
+  }
 
  /* Footer */
 
