--- a/assets/CSS/about-us.css
+++ b/assets/CSS/about-us.css
@@ -121,38 +121,37 @@ body {
 }
 
 .facilities-header {
-font-size: 30px;
-text-align: center;
+    font-size: 30px;
+    text-align: center;
 }
 
 .facilities-text {
-border:solid;
+    border: solid;
 }
 
 .rows {
-    display: flex;
-    flex-wrap: wrap;
-    padding: 0 4px;
-  }
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+}
 
 .image-container {
-  
-    flex: 45%;
-    padding: 10px;
-    font-size: 25px;
-    
-  }
-  
-  .image-container > img {
-
-    border: 2px solid rgb(0, 0, 0);
-    width: 30%;
-    margin: 2px;
 
 
-  }
+}
 
- /* Footer */
+.image-container>img {
+border: solid black;
+    width: 100%;
+    height: 70%;
+
+}
+
+.image-container> h3, .image-container > p {
+
+}
+
+/* Footer */
 
 .footer {
     background: #dad4d4;
