--- a/assets/CSS/booking.css
+++ b/assets/CSS/booking.css
@@ -143,7 +143,7 @@ header {
 
     background-color: rgba(100, 179, 201, 0.7);
     bottom: 20%;
-    right:5%;
+    right:2%;
     position: absolute;
 }
 
@@ -256,3 +256,16 @@ input[type=submit] {
     font-size: 2em;
     margin: 0% 1%;
 }
+
+/* Tablet media-size */
+@media screen and (max-width: 768px) {
+  
+    
+}
+
+/* Phone media-size */
+@media screen and (max-width: 425px) {
+
+
+     
+ }
