--- a/assets/CSS/about-us.css
+++ b/assets/CSS/about-us.css
@@ -200,6 +200,16 @@ body {
 /* Phone media-size */
 @media screen and (max-width: 425px) {
 
+.rows {
+    display: block;
+    width: 100%;
+    margin-left: 0;
+    margin-right: 0;
+    margin: auto;
 
+}
+.image-container {
+    
+}
      
  }
