changed style in home-page to make it fit better in 1200px

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -141,8 +141,8 @@ header {
     padding-left: 20px;
 
     background-color: rgba(100, 179, 201, 0.7);
-    bottom: 7%;
-    right: 7%;
+    bottom: 8%;
+    left: 7%;
     position: absolute;
 
 }
@@ -165,7 +165,7 @@ body {
 }
 
 .left-announcement-heading {
-    width: 70%;
+    width: 450px;
     float: right;
     line-height: 20px;
     clear: both;
@@ -181,7 +181,7 @@ body {
 }
 
 .right-announcement-heading {
-    width: 70%;
+    width: 450px;
     float: left;
     line-height: 20px;
     clear: both;
@@ -255,6 +255,4 @@ body {
 /* Phone media-size */
 @media screen and (max-width: 425px) {
 
-
-     
- }
+}
