--- a/assets/CSS/booking.css
+++ b/assets/CSS/booking.css
@@ -257,15 +257,25 @@ input[type=submit] {
     margin: 0% 1%;
 }
 
-/* Tablet media-size */
-@media screen and (max-width: 768px) {
-  
+/* Medium tablet-size */
+@media screen and (max-width: 820px) {
+    body {
+        background-color: green;
+    }
+    }
     
-}
-
-/* Phone media-size */
-@media screen and (max-width: 425px) {
-
-
-     
- }
+    /* Small Tablet media-size */
+    @media screen and (max-width: 768px) {
+       
+        body {
+    
+            background-color: red;    
+    }
+    }
+    
+    /* Phone media-size */
+    @media screen and (max-width: 425px) {
+        body {
+            background-color: blue;
+        }
+    }
