--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -127,7 +127,6 @@ header {
 }
 
 .text-image-header {
-    font-size: 200%;
     font-family: 'Handlee', cursive;
     font-size: 30px;
     letter-spacing: 3px;
@@ -245,7 +244,14 @@ body {
 
 /* Medium tablet-size */
 @media screen and (max-width: 820px) {
-    body {}
+    .navigation-bar {
+        margin-top: 40px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 10%;
+        list-style-type: none;
+    }
 
     #left-announcement {
         float: none;
@@ -264,17 +270,14 @@ body {
         margin-bottom: 0px;
         float: none;
     }
-    #text-image-header {
-        width: 250px;
-        height: 200px;
-    
-        padding-top: 20px;
-        padding-left: 20px;
-    
-        background-color: rgba(100, 179, 201, 0.7);
-        bottom: 8%;
+
+    .text-image-header {
+        font-size: 22px;
+        width: 200px;
+        height: 150px;
+        bottom: 25%;
         left: 7%;
-        position: absolute;
+
     }
 }
 
