--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -145,6 +145,7 @@ header {
 }
 
 body {
+
     background-color: #e5e5e5;
 }
 
@@ -161,40 +162,20 @@ body {
     text-decoration: underline;
 }
 
-.left-announcement-heading {
-    width: 450px;
-    float: right;
-    line-height: 20px;
-    clear: both;
-    margin-bottom: 50px;
 
+.flexbox {
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+    text-align: center;
 }
 
-#left-announcement {
-    padding-top: 30px;
-    width: 46%;
-    float: left;
-
-}
-
-.right-announcement-heading {
-    width: 450px;
-    float: left;
-    line-height: 20px;
-    clear: both;
-    margin-bottom: 50px;
-}
-
-#right-announcement {
-    padding-top: 30px;
-    width: 46%;
-    float: right;
-}
 
 .announcement-image {
-    margin-top: 30px;
-    width: 100%;
-    height: 300px;
+    margin-top: 20px;
+   height: 300px;
+   width: 500px;
+   margin-bottom: 20px;
 
 }
 
@@ -245,31 +226,21 @@ body {
 /* Medium tablet-size */
 @media screen and (max-width: 820px) {
     .navigation-bar {
-        margin-top: 40px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        gap: 10%;
-        list-style-type: none;
-    }
-
-    #left-announcement {
-        float: none;
-        margin: auto;
-
-    }
-
-    #right-announcement {
-        float: none;
-        margin: auto;
-
+        gap: 0%;
     }
 
     #announcements {
         height: 1000px;
         margin-bottom: 0px;
-        float: none;
+
     }
+   
+    #right-announcement {
+margin-top: 30px;
+    }
+.flexbox {
+    display: block;
+}
 
     .text-image-header {
         font-size: 22px;
@@ -282,17 +253,42 @@ body {
 }
 
 /* Small Tablet media-size */
-@media screen and (max-width: 768px) {
-
-    body {
-
-        background-color: red;
-    }
-}
+@media screen and (max-width: 768px) {}
 
 /* Phone media-size */
-@media screen and (max-width: 425px) {
-    body {
-        background-color: blue;
+@media screen and (max-width: 375px) {
+    .text-image-header {
+        font-size: 22px;
+        width: 200px;
+        height: 150px;
+        bottom: 2%;
+        left: 7%;
+
     }
+
+    .hero-section {
+        height: 1000px;
+        width: 150%;
+
+    }
+
+    .navigation-bar {
+        gap: 0%;
+    }
+
+
+    #announcements {
+        height: 1000px;
+        margin-bottom: 0px;
+    }
+
+    .text-image-header {
+        font-size: 22px;
+        width: 200px;
+        height: 0px;
+        bottom: 25%;
+        left: 7%;
+
+    }
+
 }
