--- a/assets/CSS/about-us.css
+++ b/assets/CSS/about-us.css
@@ -193,23 +193,76 @@ body {
 
 /* Medium tablet-size */
 @media screen and (max-width: 820px) {
-    body {
-        background-color: green;
+    .navigation-bar {
+        gap: 0%;
     }
+
+    #announcements {
+        height: 1000px;
+        margin-bottom: 0px;
+
     }
-    
-    /* Small Tablet media-size */
-    @media screen and (max-width: 768px) {
-       
-        body {
-    
-            background-color: red;    
+
+    #right-announcement {
+        margin-top: 30px;
     }
+
+    .flexbox {
+        display: block;
     }
-    
-    /* Phone media-size */
-    @media screen and (max-width: 425px) {
-        body {
-            background-color: blue;
-        }
+
+    .text-image-header {
+        font-size: 22px;
+        width: 200px;
+        height: 150px;
+        bottom: 25%;
+        left: 7%;
+
     }
+}
+
+/* Small Tablet media-size */
+@media screen and (max-width: 768px) {}
+
+/* Phone media-size */
+@media screen and (max-width: 375px) {
+
+    .header-heading {
+        font-size: 40px;
+    }
+
+    .text-image-header {
+        display: none;
+
+    }
+
+    .hero-section {
+        height: 600px;
+        width: 100%;
+
+    }
+
+    .navigation-bar>li {
+        text-decoration: none;
+        font-size: 14px;
+    }
+
+    #announcements {
+        height: 740px;
+        margin-bottom: 0px;
+
+    }
+
+    #right-announcement {
+        margin-top: 30px;
+    }
+
+    .announcement-image {
+        margin-top: 20px;
+        height: 150px;
+        width: 250px;
+        margin-bottom: 10px;
+
+    }
+
+}
