--- a/assets/CSS/booking.css
+++ b/assets/CSS/booking.css
@@ -112,7 +112,6 @@ header {
     padding: 0.5em 0;
     position: absolute;
     content: attr(data-hover);
-
     white-space: nowrap;
     max-width: 0%;
     overflow: hidden;
@@ -134,16 +133,13 @@ header {
     font-family: 'Handlee', cursive;
     font-size: 22px;
     letter-spacing: 3px;
-
     width: 250px;
     height: 200px;
-
     padding-top: 20px;
     padding-left: 15px;
-
     background-color: rgba(100, 179, 201, 0.7);
     bottom: 20%;
-    right:2%;
+    right: 2%;
     position: absolute;
 }
 
@@ -153,7 +149,7 @@ header {
 
     text-align: center;
     margin-top: 130px;
-    
+
 }
 
 .google-maps {
@@ -187,6 +183,13 @@ input[type=submit] {
 
 }
 
+.form-wrap {
+    text-align: center;
+    margin-top: 125px;
+    border-radius: 5px;
+    padding: 20px;
+}
+
 input[type=text],
 input[type=email],
 select,
@@ -209,12 +212,7 @@ input[type=submit] {
 
 }
 
-.form-wrap {
-    text-align: center;
-    margin-top: 125px;
-    border-radius: 5px;
-    padding: 20px;
-}
+
 
 /* footer css */
 
@@ -259,36 +257,49 @@ input[type=submit] {
 
 /* Medium tablet-size */
 @media screen and (max-width: 820px) {
-    .navigation-bar {
-        gap: 0%;
+    .text-image-header-booking {
+        font-size: 23px;
+        width: 250px;
+        height: 170px;
+        padding-top: 10px;
+        padding-left: 15px;
+        padding-right: 15px;
+        top: 68%;
+        right: 33%;
     }
-
-    #announcements {
-        height: 1000px;
-        margin-bottom: 0px;
-
-    }
-
-    #right-announcement {
-        margin-top: 30px;
-    }
-
-    .flexbox {
-        display: block;
-    }
-
-    .text-image-header {
-        font-size: 22px;
-        width: 200px;
-        height: 150px;
-        bottom: 25%;
-        left: 7%;
+    input[type=text],
+    input[type=email],
+    select,
+    textarea {
+        width: 90%;
+        padding: 15px;
 
     }
 }
+    
 
 /* Small Tablet media-size */
-@media screen and (max-width: 768px) {}
+@media screen and (max-width: 768px) {
+    .text-image-header-booking {
+        font-size: 20px;
+        width: 230px;
+        height: 150px;
+        padding-top: 10px;
+        padding-left: 15px;
+        padding-right: 15px;
+        top: 81%;
+        right: 33%;
+    }
+
+    input[type=text],
+    input[type=email],
+    select,
+    textarea {
+        width: 90%;
+        padding: 15px;
+
+    }
+}
 
 /* Phone media-size */
 @media screen and (max-width: 375px) {
@@ -309,34 +320,31 @@ input[type=submit] {
 
     .text-image-header-booking {
         font-size: 17px;
-        letter-spacing: 3px;
         width: 180px;
         height: 180px;
         padding-top: 20px;
         padding-left: 15px;
-        background-color: rgba(100, 179, 201, 0.7);
-        bottom: 1%;
+        top: 110%;
         right: 26%;
-       justify-content: center;
     }
+
     .google-maps {
         border: solid;
         display: block;
-        width:300px;
-        height:300px;
+        width: 300px;
+        height: 300px;
         margin-top: 30px;
         margin-left: auto;
         margin-right: auto;
     }
 
-    .form {
- 
+    input[type=text],
+    input[type=email],
+    select,
+    textarea {
+        width: 90%;
+        padding: 15px;
+
+    }
+   
 }
-}
-
-
-
-
-
-
-
