--- a/assets/CSS/booking.css
+++ b/assets/CSS/booking.css
@@ -175,7 +175,7 @@ textarea {
 }
 
 input[type=submit] {
-    background-color: #04AA6D;
+    background-color:green;
     color: white;
     padding: 12px 20px;
     border: none;
