--- a/assets/CSS/booking.css
+++ b/assets/CSS/booking.css
@@ -204,7 +204,7 @@ textarea {
 }
 
 input[type=submit] {
-    background-color: #04AA6D;
+    background-color: green
     color: white;
     padding: 12px 20px;
     border: none;
@@ -214,10 +214,10 @@ input[type=submit] {
 
 
 
-/* footer css */
+/* Footer */
 
 .footer {
-    background: #dad4d4;
+    background: rgba(120, 125, 126, 0.604);
     padding: 18px 0px;
     font-family: 'Play', sans-serif;
     text-align: center;
@@ -227,13 +227,13 @@ input[type=submit] {
     width: 100%;
     margin: 1% 0%;
     padding: 0.6% 0%;
-    color: gray;
+    color: rgb(0, 0, 0);
     font-size: 0.8em;
 }
 
 .footer .row a {
     text-decoration: none;
-    color: gray;
+    color: rgb(0, 0, 0);
     transition: 0.5s;
 }
 
