--- a/assets/CSS/booking.css
+++ b/assets/CSS/booking.css
@@ -204,7 +204,7 @@ textarea {
 }
 
 input[type=submit] {
-    background-color: green
+    background-color: green;
     color: white;
     padding: 12px 20px;
     border: none;
