--- a/assets/CSS/about-us.css
+++ b/assets/CSS/about-us.css
@@ -203,13 +203,29 @@ body {
 
 /* Medium tablet-size */
 @media screen and (max-width: 820px) {
+    .rows {
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 20px;
+        margin-top: 70px;
+        margin-left: 10%;
+        margin-right: 10%;
+    }
+    .rows h3, .rows p {
+        font-size: 1.7rem;
 
+    }
+    .facilities-text {
+        font-size: 1.7rem;
+        margin-left: 10% ;
+        margin-right: 10%;
+    }
 }
     
 
 /* Small Tablet media-size */
 @media screen and (max-width: 768px) {
- 
+   
     }
 
     
@@ -221,12 +237,20 @@ body {
     .header-heading {
         font-size: 40px;
     }
-
+    .rows {
+        gap: 70px;
+        margin-bottom: 30px;
+    }
 
     .navigation-bar>li {
         text-decoration: none;
         font-size: 14px;
     }
-  
+    .facilities-text {
+        font-size: 1rem;
+    }
+.rows p {
+    font-size: 1rem;
+}
 
 }
