--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -281,7 +281,11 @@ body {
         margin-bottom: 0px;
 
     }
-
+#big-header {
+    font-size: 1.6rem;
+    margin-left: 1%;
+    margin-right: 1%;
+}
     #right-announcement {
         margin-top: 30px;
     }
