--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -222,9 +222,11 @@ body {
 
 /* Medium tablet-size */
 @media screen and (max-width: 820px) {
-    .navigation-bar {
-        gap: 0%;
+    .navigation-bar>li {
+        text-decoration: none;
+        font-size: 14px;
     }
+    
 
     #announcements {
         height: 1000px;
@@ -248,6 +250,10 @@ body {
         left: 7%;
 
     }
+    .announcement-image {
+        width: 400px;
+        height: 250px;
+       }
 }
 
 
@@ -256,21 +262,19 @@ body {
     .header-heading {
         font-size: 2rem;
     }
-    .navigation-bar>li {
-        text-decoration: none;
-        font-size: 14px;
+    
+    .announcement-image {
+     width: 300px;
+     height: 200px;
     }
     }
 
 /* Phone media-size */
 @media screen and (max-width: 375px) {
-
-    .header-heading {
-        font-size: 2rem;
-    }
-
-    .text-image-header {
-        display: none;
+    
+    .navigation-bar>li {
+        text-decoration: none;
+        font-size: 11px;
 
     }
 
@@ -280,16 +284,12 @@ body {
 
     }
 
-    .navigation-bar>li {
-        text-decoration: none;
-        font-size: 14px;
-    }
 
     #announcements {
         height: 740px;
         margin-bottom: 0px;
-
     }
+
 #big-header {
     font-size: 1.6rem;
     margin-left: 1%;
