added comments in my html to make it easier to follow my code.

--- a/assets/CSS/about-us.css
+++ b/assets/CSS/about-us.css
@@ -1,8 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&family=Tangerine&display=swap');
 
-
-
-
 * {
     color: black;
     padding: 0px;
@@ -18,7 +15,6 @@ header {
     text-decoration: none;
 }
 
-
 .header-heading {
     display: flex;
     justify-content: center;
@@ -30,6 +26,7 @@ header {
 }
 
 /* Navbar */
+
 .navigation-bar {
     margin-top: 40px;
     display: flex;
@@ -122,6 +119,7 @@ body {
 }
 
 /* Facilities */
+
 .facilities-header {
     font-size: 30px;
     text-align: center;
@@ -193,16 +191,18 @@ body {
     margin: 0% 1%;
 }
 
-/* Medium tablet-size */
+/* MEDIA STYLING */
+
+/* Media for screens that are 768px, down to 441px.*/
+
 @media screen and (max-width: 820px) {
     .navigation-bar {
         gap: 0%;
     }
-
-
 }
 
-/* Medium tablet-size */
+/* Media for screens that are 820px, down to 767px.*/
+
 @media screen and (max-width: 820px) {
     .rows {
         display: grid;
@@ -226,8 +226,8 @@ body {
     }
 }
 
+/* Media for screens that are 768px, down to 441px.*/
 
-/* Small Tablet media-size */
 @media screen and (max-width: 768px) {
     .navigation-bar>li {
         text-decoration: none;
@@ -251,7 +251,8 @@ body {
 
 }
 
-/* Large phone-devices */
+/* Media for screens that are 440px, down to 374px.*/
+
 @media screen and (max-width: 440px) {
     .header-heading {
         font-size: 2rem;
@@ -278,23 +279,23 @@ body {
     }
 }
 
+/* Media for screens that are 375px or less.*/
 
-/* Phone media-size */
 @media screen and (max-width: 375px) {
 
     .header-heading {
         font-size: 2rem;
     }
+
     .navigation-bar>li {
         text-decoration: none;
         font-size: 14px;
     }
+
     .rows {
         gap: 70px;
         margin-bottom: 30px;
     }
-
- 
 
     .facilities-text {
         font-size: 1rem;
@@ -306,9 +307,9 @@ body {
 
 }
 
-/* Smaller devices*/
-@media screen and (max-width: 280px) {
+/* Media for screens that are 280px and less.*/
 
+@media screen and (max-width: 280px) {
     .footer {
         margin-top: 100px;
     }
